--- a/style.css
+++ b/style.css
@@ -31,8 +31,7 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    color: blue;
-    background-color: rgb(255, 255, 255);
+    color: black;
     font-family: Arial, Helvetica, sans-serif;
     font-size: x-large;
     height: fit-content;
