--- a/style1.css
+++ b/style1.css
@@ -56,7 +56,7 @@ header ul li a:hover{
 .banner{
 	height: 90vh;
 	background-image: url(bg.jpg);
-	background-size: cover;
+	background-size: contain;
 	position: relative;
 	display: flex;
 	justify-content: center;
